added new page functionality and fixed link paths.

--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#">Brand</a>
+                        <a class="navbar-brand" href="index.html">ADL</a>
                     </div>
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
-                            <li><a href="aboutMe.html">About Me</a></li>
-                            <li><a href="#">Resume</a></li>
+                            <li><a href="components/aboutMe/aboutMe.html">About Me</a></li>
+                            <li><a href="components/resume/resume.html">Resume</a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
                             <li><a href="#">My Projects</a></li>
-                            <li><a href="#">Contact Me</a></li>
+                            <li><a href="components/contact/contact.html">Contact Me</a></li>
                         </ul>
                     </div>
                     <!-- /.navbar-collapse -->
@@ -49,6 +49,7 @@
     </header>
 
     <main class="container">
+       <br>
         <h1 class="text-center shortBio">Who I am.</h1>
         <div class="row">
             <p class="col-sm-6 col-xs-12 text-justify shortBioText">Originally from Washington, D.C. I grew up on the east coast and after 18 years I decided that I wanted a change of scenery (my mom still isn't happy about it, sorry Mom!). Called by the outdoors, a sense of adventure, and higher education, I moved to Salt Lake City, UT, the place I now proudly call home.</p>
@@ -84,7 +85,7 @@
                     <span class="fa fa-twitter-square fa-4x twitter" aria-hidden="true"></span>
                 </div>
                 <div class="col-sm-3 text-center">
-                    <a href="https://github.com/adlclimber012"><span class="fa fa-github fa-4x github" aria-hidden="true" </span></a>
+                    <a href="https://github.com/adlclimber012"><span class="fa fa-github fa-4x github" aria-hidden="true"</span></a>
                 </div>
             </div>
             <br>
