--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Alex Le Blanc Develops</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <title>Alex Le Blanc</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
@@ -15,6 +16,7 @@
             <nav class="navbar navbar-default">
                 <div class="container-fluid">
                     <!--Brand and toggle get grouped for better mobile display -->
+                    
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                             <span class="sr-only">Toggle navigation</span>
@@ -22,8 +24,9 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="index.html">ADL</a>
+                        <a class="navbar-brand text-center" href="index.html">ADL</a>
                     </div>
+
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
@@ -49,7 +52,7 @@
     </header>
 
     <main class="container">
-       <br>
+        <br>
         <h1 class="text-center shortBio">Who I am.</h1>
         <div class="row">
             <p class="col-sm-6 col-xs-12 text-justify shortBioText">Originally from Washington, D.C. I grew up on the east coast and after 18 years I decided that I wanted a change of scenery (my mom still isn't happy about it, sorry Mom!). Called by the outdoors, a sense of adventure, and higher education, I moved to Salt Lake City, UT, the place I now proudly call home.</p>
@@ -85,7 +88,7 @@
                     <span class="fa fa-twitter-square fa-4x twitter" aria-hidden="true"></span>
                 </div>
                 <div class="col-sm-3 text-center">
-                    <a href="https://github.com/adlclimber012"><span class="fa fa-github fa-4x github" aria-hidden="true"</span></a>
+                    <a href="https://github.com/adlclimber012"><span class="fa fa-github fa-4x github" aria-hidden="true" </span></a>
                 </div>
             </div>
             <br>
