--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand text-center" href="index.html">ADL</a>
+                        <a class="navbar-brand text-center" href="index.html"><img src="ADLlogoWhite.png" class="img-responsive logoImage"></a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -66,7 +66,7 @@
         </div>
         <br>
         <div class="row">
-            <div class="col-xs-6 col-xs-offset-3">
+            <div class="col-sm-6 col-sm-offset-3 col-xs-12 col-xs-offset-0">
                 <p class="text-justify shortBioText">Feel free to check out the rest of my site to learn more about me, contact me, or see some of the projects I have worked on.</p>
             </div>
         </div>
