--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="favicon-32x32.png">
 </head>
 
 <body>
     <header>
+<!--       <a class="navbar-brand text-center" href="index.html"><img src="ADLlogoWhite.png" class="img-responsive logoImage"></a>-->
         <div class="myNavbar">
             <nav class="navbar navbar-default">
                 <div class="container-fluid">
                     <!--Brand and toggle get grouped for better mobile display -->
-                    
+
+
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                             <span class="sr-only">Toggle navigation</span>
@@ -27,13 +30,19 @@
                         <a class="navbar-brand text-center" href="index.html"><img src="ADLlogoWhite.png" class="img-responsive logoImage"></a>
                     </div>
 
+
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+<!--
                         <ul class="nav navbar-nav">
                             <li><a href="components/aboutMe/aboutMe.html">About Me</a></li>
                             <li><a href="components/resume/resume.html">Resume</a></li>
                         </ul>
+-->
                         <ul class="nav navbar-nav navbar-right">
+                            <li><a href="components/aboutMe/aboutMe.html">About Me</a></li>
+                            <li><a href="components/resume/resume.html">Resume</a></li>
                             <li><a href="#">My Projects</a></li>
                             <li><a href="components/contact/contact.html">Contact Me</a></li>
                         </ul>
@@ -95,7 +104,7 @@
         </div>
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/X.Y.Z/angular-route.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-route.js"></script>
 
 </body>
 
