--- a/index.html
+++ b/index.html
@@ -13,56 +13,56 @@
 
 <body>
     <header class="container-fluid">
-       <div class="row">
-        <!--       <a class="navbar-brand text-center" href="index.html"><img src="ADLlogoWhite.png" class="img-responsive logoImage"></a>-->
+        <div class="row">
+            <!--       <a class="navbar-brand text-center" href="index.html"><img src="ADLlogoWhite.png" class="img-responsive logoImage"></a>-->
 
-        <div class="col-xs-12 text-center module darken">
-
-
-            <div class="myNavbar">
-                <nav class="navbar navbar-default">
-                    <div>
-                        <!--Brand and toggle get grouped for better mobile display -->
+            <div class="col-xs-12 text-center module darken">
 
 
-                        <div class="navbar-header">
-                            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                                <span class="sr-only">Toggle navigation</span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                            </button>
-                            <a class="navbar-brand text-center" href="index.html"><img src="ADLlogoWhite.png" class="img-responsive logoImage"></a>
-                        </div>
+                <div class="myNavbar">
+                    <nav class="navbar navbar-default">
+                        <div>
+                            <!--Brand and toggle get grouped for better mobile display -->
 
 
-                        <!-- Collect the nav links, forms, and other content for toggling -->
-                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                            <div class="navbar-header">
+                                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                                    <span class="sr-only">Toggle navigation</span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                </button>
+                                <a class="navbar-brand text-center" href="index.html"><img src="ADLlogoWhite.png" class="img-responsive logoImage"></a>
+                            </div>
 
-                            <!--
+
+                            <!-- Collect the nav links, forms, and other content for toggling -->
+                            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+                                <!--
                         <ul class="nav navbar-nav">
                             <li><a href="components/aboutMe/aboutMe.html">About Me</a></li>
                             <li><a href="components/resume/resume.html">Resume</a></li>
                         </ul>
 -->
-                            <ul class="nav navbar-nav navbar-right">
-                                <li><a href="components/aboutMe/aboutMe.html">About Me</a></li>
-                                <li><a href="components/resume/resume.html">Resume</a></li>
-                                <li><a href="#">My Projects</a></li>
-                                <li><a href="components/contact/contact.html">Contact Me</a></li>
-                            </ul>
+                                <ul class="nav navbar-nav navbar-right">
+                                    <li><a href="components/aboutMe/aboutMe.html">About Me</a></li>
+                                    <li><a href="components/resume/resume.html">Resume</a></li>
+                                    <li><a href="#">My Projects</a></li>
+                                    <li><a href="components/contact/contact.html">Contact Me</a></li>
+                                </ul>
+                            </div>
+                            <!-- /.navbar-collapse -->
                         </div>
-                        <!-- /.navbar-collapse -->
-                    </div>
-                    <!-- /.container-fluid -->
-                </nav>
-            </div>
+                        <!-- /.container-fluid -->
+                    </nav>
+                </div>
 
-            <div class="my-title">
-                <h1 class="name">Alex Le Blanc</h1>
-                <h4 class="subName">Web Developer</h4>
+                <div class="my-title">
+                    <h1 class="name"><u>Alex Le Blanc</u></h1>
+                    <h4 class="subName">Web Developer</h4>
+                </div>
             </div>
-        </div>
         </div>
     </header>
 
