--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                 </div>
 
                 <div class="my-title">
-                    <h1 class="name"><u>Alex Le Blanc</u></h1>
-                    <h4 class="subName">Web Developer</h4>
+                    <h1 class="name"><u>Alex LeBlanc</u></h1>
+                    <h4 class="subName">Data Migration Engineer</h4>
                 </div>
             </div>
         </div>
