--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                                     <span class="icon-bar"></span>
                                     <span class="icon-bar"></span>
                                 </button>
-                                <a class="navbar-brand text-center" href="index.html"><img src="ADLlogoWhite.png" class="img-responsive logoImage"></a>
+                                <a class="navbar-brand text-center" href="index.html"><img src="ADLlogoWhite.png" onmouseover="this.src='ADLlogoAquamarine.png';" onmouseout="this.src='ADLlogoWhite.png';" class="img-responsive logoImage"></a>
                             </div>
 
 
@@ -48,7 +48,7 @@
                                 <ul class="nav navbar-nav navbar-right">
                                     <li><a href="components/aboutMe/aboutMe.html">About Me</a></li>
                                     <li><a href="components/resume/resume.html">Resume</a></li>
-                                    <li><a href="#">My Projects</a></li>
+                                    <li><a href="#">The Book Tracker</a></li>
                                     <li><a href="components/contact/contact.html">Contact Me</a></li>
                                 </ul>
                             </div>
@@ -102,7 +102,9 @@
                     <span class="fa fa-twitter-square fa-4x twitter" aria-hidden="true"></span>
                 </div>
                 <div class="col-sm-3 text-center">
-                    <a href="https://github.com/adlclimber012"><span class="fa fa-github fa-4x github" aria-hidden="true" </span></a>
+                    <!--a href="https://github.com/adlclimber012"-->
+                    <span class="fa fa-github fa-4x github" aria-hidden="true"></span>
+                        <!--/a-->
                 </div>
             </div>
             <br>
