--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 -->
                                 <ul class="nav navbar-nav navbar-right">
                                     <li><a href="components/aboutMe/aboutMe.html">About Me</a></li>
-                                    <li><a href="components/resume/resume.html">Resume</a></li>
-                                    <li><a href="#">The Book Tracker</a></li>
+                                    <li><a href="components/resume/resume.html">R&eacute;sum&eacute;</a></li>
+                                    <li><a href="components/bookTracker/bookTracker.html">The Book Tracker</a></li>
                                     <li><a href="components/contact/contact.html">Contact Me</a></li>
                                 </ul>
                             </div>
@@ -60,7 +60,7 @@
 
                 <div class="my-title">
                     <h1 class="name"><u>Alex LeBlanc</u></h1>
-                    <h4 class="subName">Data Migration Engineer</h4>
+                    <h4 class="subName">Just some dude from Salt Lake City</h4>
                 </div>
             </div>
         </div>
@@ -69,8 +69,8 @@
     <main class="container">
         <h1 class="text-center shortBio">Who I am.</h1>
         <div class="row">
-            <p class="col-sm-6 col-xs-12 text-justify shortBioText">Originally from Washington, D.C. I grew up on the east coast and after 18 years I decided that I wanted a change of scenery (my mom still isn't happy about it, sorry Mom!). Called by the outdoors, a sense of adventure, and higher education, I moved to Salt Lake City, UT, the place I now proudly call home.</p>
-            <p class="col-sm-6 col-xs-12 text-justify shortBioText">I received a B.S. in Criminal Justice from Westminster College, but shortly before graduating I realized that my true passion lies in coding. I joined the workforce, but struggled to find job satisfaction, so I turned to programming and can happily say that today I am a full-stack web developer.</p>
+            <p class="col-sm-6 col-xs-12 text-justify shortBioText">&emsp;&emsp;Originally from Washington, D.C. I grew up on the east coast, moving to SLC at 18 to attend Westminster College. I spent my high school years dedicating every second of my free time to rock climbing, so Utah was the perfect location to continue exploring that passion while focusing on my education. I attended Westminster College, earning a B.S. in Criminal Justice with the intention of law school shortly thereafter. Somewhere on the way to law school I got a bit lost and decided that before making the commitment to practicing law, I should spend a few years working instead. Utah being the tech-hub that it is, I was able to find a job working in legal technology, allowing me to remain tapped into the legal world without the need for law school. It's a harmony that works well for me.</p>
+            <p class="col-sm-6 col-xs-12 text-justify shortBioText">&emsp;&emsp;While I'm proud of my work and thankful for the passion it helped me discover, I am not wholy definined by my job. When I'm not working you can find me deeply engaged in one of my many hobbies, including climbing, biking, bowling, reading, or deep in a mess of spreadsheets tracking some new passion. I've alwasy enjoyed tracking progress, whether it was the climbs I've done or my bowling average, spreadsheets, graphs, pie charts, and dashboards bring me genuine joy. (It's possible I'm a little wierd. I accept this). To date the app I am the proudest of is my book tracker. Reading has always been a passion of mine, so naturally a few years ago I thought "why don't I make a tracker for the books I've read!?" and that's exactly what I did.  </p>
         </div>
         <br>
         <div class="row">
@@ -81,13 +81,13 @@
         <br>
         <div class="row">
             <div class="col-sm-6 col-sm-offset-3 col-xs-12 col-xs-offset-0">
-                <p class="text-justify shortBioText">Feel free to check out the rest of my site to learn more about me, contact me, or see some of the projects I have worked on.</p>
+                <p class="text-justify shortBioText">Feel free to check out the rest of my site to learn more about me, see what I'm reading, view my resume, or contact me.</p>
             </div>
         </div>
         <div class="row">
             <div class="row">
                 <h3 class="text-center underline">
-                    Find Me on Social Media:
+                    Find me on the interwebs:
                 </h3>
                 <br>
             </div>
